chore: update devcontainer template

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -9,7 +9,8 @@
     "customizations": {
         "vscode": {
             "extensions": [
-                "ms-azuretools.vscode-azurefunctions"
+                "ms-azuretools.vscode-azurefunctions",
+                "azurite.azurite"
             ]
         }
     }
