--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0-alpha.7"
+    "@azure/communication-call-automation": "^1.0.0",
+    "@azure/communication-phone-numbers": "^1.3.0-alpha.20230820.1",
+    "@azure/cosmos": "^4.0.0",
+    "@azure/functions": "^4.0.0-alpha.7",
+    "@azure/identity": "^3.3.0"
   },
   "devDependencies": {
     "@types/node": "^18.x",
-    "typescript": "^5.2.2",
-    "rimraf": "^5.0.0"
+    "rimraf": "^5.0.0",
+    "typescript": "^5.2.2"
   },
   "main": "dist/src/functions/*.js"
 }
