--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@azure/identity": "^3.3.1"
   },
   "devDependencies": {
-    "@types/node": "^18.x",
+    "@types/node": "^18.18.4",
     "rimraf": "^5.0.5",
     "typescript": "^5.2.2"
   },
